samples/_failures_safe/1761365742_002b40_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9665e939.c: In function ‘main’:
./samples/SAFE/__tmp_9665e939.c:168:12: error: missing terminating " character
  168 |     printf("Enter expression to
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9665e939.c:168:5: error: expected expression at end of input
  168 |     printf("Enter expression to
      |     ^~~~~~
./samples/SAFE/__tmp_9665e939.c:168:5: error: expected declaration or statement at end of input
